grammerly updates to ch2 and ch3

--- a/thesis/Ch2-AnalyticalFw/Chapter2.tex
+++ b/thesis/Ch2-AnalyticalFw/Chapter2.tex
@@ -1,11 +1,11 @@
 \graphicspath{{./Ch2-AnalyticalFw/images/}}
 
 \chapter{Analyzing Off-chip Memory Accesses} \label{chap:analyticalFw}
-Performance of NN accelerators is often limited by the off-chip memory bandwidth and their high energy consumption also results due to large volume of off-chip memory accesses. NN accelerators use on-chip memories and reuse the data from it to minimize the number of off-chip memory accesses. Assuming that the data movement energy primarily depends on the number of bytes accessed from the memory, Figure~\ref{fig:memsAccess} illustrates the impact of data reuse from the on-chip memory on data movement energy. Figure~\ref{fig:memsAccessSingle} and Figure~\ref{fig:memsAccessDouble} show the number of memory accesses and energy estimates when data is directly accessed from the off-chip memory and when re-using the data from on-chip memory, respectively. Let $N$ is the number of bytes accessed by the processing element (PE) and $e_{1}$ and $e_{2}$ are the energy per bytes access from the off-chip and on-chip memories respectively. If $E_1$ is the data movement energy when PE accesses $N$ bytes of data directly from off-chip memory (Figure~\ref{fig:memsAccessSingle}), $E_1$ can be expressed as following
+The off-chip memory bandwidth often limits the performance of NN accelerators, and their high energy consumption also results from the large volume of off-chip memory accesses. NN accelerators use on-chip memories and reuse the data from it to minimize the number of off-chip memory accesses. Assuming that the data movement energy primarily depends on the number of bytes accessed from the memory, Figure~\ref{fig:memsAccess} illustrates the impact of data reuse from the on-chip memory on data movement energy. Figure~\ref{fig:memsAccessSingle} and Figure~\ref{fig:memsAccessDouble} show the number of memory accesses and energy estimates when data is directly accessed from the off-chip memory and when reusing the data from on-chip memory, respectively. Let $N$ is the number of bytes accessed by the processing element (PE), and $e_{1}$ and $e_{2}$ are the energy per byte access from the off-chip and on-chip memories, respectively. If $E_1$ is the data movement energy when PE accesses $N$ bytes of data directly from off-chip memory (Figure~\ref{fig:memsAccessSingle}), $E_1$ can be expressed as following
 \begin{equation}\label{eq:E_1} 
 	E_{1}= N\cdot e_1
 \end{equation}
-If $E_2$ is the data movement energy when two levels of memory is used (Figure~\ref{fig:memsAccessDouble}) and $n$ is the data reuse from the on-chip memory per byte of off-chip memory access. In this two level of memory hierarchy Figure~\ref{fig:memsAccessDouble}, although the total number of bytes accessed by PE are still the same ($N$), the number of off-chip memory accesses are reduced to $\frac{N}{n}$. The data movement energy ($E_2$ ) in this case can be expressed as following,
+If $E_2$ is the data movement energy when two levels of memory are used (Figure~\ref{fig:memsAccessDouble}) and $n$ is the data reuse from the on-chip memory per byte of off-chip memory access. In this two-level of memory hierarchy Figure~\ref{fig:memsAccessDouble}, although the total number of bytes accessed by PE is still the same ($N$), the number of off-chip memory accesses is reduced to $\frac{N}{n}$. The data movement energy ($E_2$ ) in this case can be expressed as follows,
 \begin{align}\label{eq:E_2}
 	\begin{split}
 	E_{2}&= \frac{N}{n}\cdot e_1 + \frac{N}{n}\cdot n\cdot e_2 \\
@@ -22,7 +22,7 @@ The energy efficiency compared to (Figure~\ref{fig:memsAccessSingle}) can be exp
 	&=1-(\frac{1}{n}+\frac{e_{2}}{e_{1}})
 	\end{split}
 \end{align}
-For a given architecture, $e_{1}$ and $e_{2}$ are fixed and $e_1$ is significantly high compared to $e_2$. Equation~\ref{eq:e_efficiency} shows energy efficiency improves significantly with data reuse from lower level of memory ($n$). DNN accelerators use multiple levels of on-chip memories and apply techniques to maximize the data reuse from the lower memories to improve energy efficiency. 
+For a given architecture, $e_{1}$ and $e_{2}$ are fixed and $e_1$ is significantly high compared to $e_2$. Equation~\ref{eq:e_efficiency} shows energy efficiency improves significantly with data reuse from the lower memory level ($n$). DNN accelerators use multiple levels of on-chip memories and apply techniques to maximize the data reuse from the lower memories to improve energy efficiency. 
 \begin{figure}[!htb]
 	\centering
 	\captionsetup{font=sf}
@@ -36,7 +36,7 @@ For a given architecture, $e_{1}$ and $e_{2}$ are fixed and $e_1$ is significant
 	\label{fig:memsAccess}
 \end{figure}
 
-The NN accelerator reads the input data (or input activations), filter weights, and partial sums from the off-chip memory and stores them temporarily in the on-chip memory. The PE-array reads the data from the on-chip memory to perform the computations and then stores them back to the on-chip memory. The partial sums or the outputs of the computations are then finally stored in the off-chip memory. The flow of the data is shown in Figure~\ref{fig:nnDataFlow}. Due to large difference between the energy consumption of accessing the data from the off-chip memory compared to access energy from the on-chip memory and computation energy, NN accelerators aims to minimize the off-chip memory accesses by exploiting the memory hierarchy and data-reuse from them.
+The NN accelerator reads the input data (or input activations), filter weights, and partial sums from the off-chip memory and stores them temporarily in the on-chip memory. The PE array reads the data from the on-chip memory to perform the computations and then stores them back to the on-chip memory. The partial sums or the outputs of the computations are then finally stored in the off-chip memory. The data flow is shown in Figure~\ref{fig:nnDataFlow}. Due to the significant difference between the energy consumption of accessing the data from the off-chip memory and the on-chip memory, NN accelerators aim to minimize the off-chip memory accesses by exploiting the memory hierarchy and data reuse from them.
 \begin{figure}[!htb]
 	\centering
 	\captionsetup{font=sf}	
@@ -45,7 +45,7 @@ The NN accelerator reads the input data (or input activations), filter weights, 
 	\label{fig:nnDataFlow}
 \end{figure}
 
-The layer data is stored as multi-dimensional arrays in the off-chip memory, which is generally too large to fit in the local on-chip memory. In order to perform the computations, the large layer data is partitioned into small tiles.  These tiles are fetched from the off-chip memory, repeatedly to compute the final output sum. To observe the impact of tile dimensions on off-chip memory accesses for a given data reuse scheme we measured the off-chip memory accesses for a popular CNN, VGG16 for different tile dimensions using the algorithm described in section~\ref{sec:Access3DData}. Figure~\ref{fig:impactOfTileDims} shows the impact of tile dimensions on off-chip memory accesses for VGG16, for a given tile scheduling scheme. Figure~\ref{fig:varyingTileDims} shows using different tile dimensions results in different volume of off-chip memory accesses. A good tile dimension can reduce the off-chip memory accesses upto 90\% compared to a bad tile dimension as shown in Figure~\ref{fig:maxNMinLayerAccess} computed for different layers of VGG16. The tile dimensions and the order in which these tiles are processed (scheduling of tiles) significantly impact the volume of data reuse and, thus, the overall energy consumption and throughput of DNN accelerators.
+The layer data is stored as multi-dimensional arrays in the off-chip memory, which is generally too large to fit in the local on-chip memory. In order to perform the computations, the large layer data is partitioned into small tiles. These tiles are repeatedly fetched from the off-chip memory to compute the final output sum. To observe the impact of tile dimensions on off-chip memory accesses for a given data reuse scheme, we measured the off-chip memory accesses for a popular CNN, VGG16, for different tile dimensions using the algorithm described in section~\ref{sec:Access3DData}. Figure~\ref{fig:impactOfTileDims} shows the impact of tile dimensions on off-chip memory accesses for VGG16, for a given tile scheduling scheme. Figure~\ref{fig:varyingTileDims} shows that using different tile dimensions results in different volumes of off-chip memory accesses. A good tile dimension can reduce off-chip memory accesses up to 90\% compared to a bad tile dimension, as shown in Figure~\ref{fig:maxNMinLayerAccess} computed for different layers of VGG16. The tile dimensions and the order in which these tiles are processed (scheduling of tiles) significantly impact the volume of data reuse and, thus, the overall energy consumption and throughput of DNN accelerators.
 \begin{figure}[!h]
 	\centering
 	\captionsetup{font=sf}
