--- a/thesis/Ch5-SOM/Chapter5.tex
+++ b/thesis/Ch5-SOM/Chapter5.tex
@@ -1,9 +1,9 @@
 \graphicspath{{./Ch5-SOM/images/}}
 
 \chapter{Performance Improvement of SOM by using Low Bit-Width Resolution} \label{chap:SOM}
-One of the prime reasons for NNs popularlity in last decade is due to their ability to detect pattern accurately. Compared to conventional solution they scale exceptionally well because of their inherit parallelism and are faster. NNs are also very power efficient, since their power consumption during the inference (recall) mode is very low. Apart from the NN benefits that we describe before, the main strength of the NNs comes from their ability to learn the classification criteria directly form the input data. In essence a NN trained with genomic data compresses its inputs and encodes it in its structure. The NN then can act as a predictor that can be queried about specific features in a given genome, instead of attempting to output linear DNA sequences as done in the conventional assembly. In other words, the ANN can invent an algorithm automatically that otherwise would have to be developed by the bioinformatics engineers. The algorithm is defined by the parameters of the networks, as they are developed during its training. That also provides with the possibility of retaining the network in order to update the identification features such as mutations and other genomic alterations that were not known before, without changing the algorithm itself.
+One of the prime reasons for NNs popularlity in last decade is due to their ability to detect patterns accurately. Compared to conventional solutions they scale exceptionally well because of their inherent parallelism. The main strength of the NNs comes from their ability to learn the classification criteria directly form the input data. In essence a NN trained with genomic data compresses its inputs and encodes it in its structure. The NN then can act as a predictor that can be queried about specific features in a given genome, instead of attempting to output linear DNA sequences as done in the conventional assembly. In other words, NNs can invent an algorithm automatically that otherwise would have to be developed by the bioinformatics engineers. The algorithm is defined by the parameters of the networks, as they are developed during its training. That also provides with the possibility of re-training the network in order to update the identification features such as mutations and other genomic alterations that were not known before, without changing the algorithm itself.
 
-Prior work in \cite{Yang2018RiBoSOM} has introduced Self-organizing maps (SOM) for rapid genome identification. SOM uses a type of unsupervised learning called competitive ANN learning model. The model reduces the data dimensions and it clusters similar data together \cite{Kohonen2013}. A trained SOM network does not require to go through the whole DNA sequence to recognize the pathogen, but only requires a small part of its DNA. SOM can be highly parallelized and such parallel implementation have been proposed for synchoros VLSI design, custom FPGA and GPUs \cite{Yang2018RiBoSOM, Porrmann2006, McConnell2012}. Another important aspect of SOM and other NNs is their robustness. NNs have been proven to work with low bit resolution without sacrificing much of their accuracy \cite{8056820}. In this work, we explore the limits of the SOM using different bit resolutions and the effect that it has on the accuracy of the SOM, as well as the benefits that this low resolution can provide for a hardware architecture. 
+Yang et al.~\cite{Yang2018RiBoSOM} has introduced Self-organizing maps (SOM) for rapid genome identification. SOM uses a type of unsupervised learning called competitive ANN learning model. The model reduces the data dimensions and it clusters similar data together \cite{Kohonen2013}. A trained SOM network does not require to go through the whole DNA sequence to recognize the pathogen, but only requires a small part of its DNA. SOM can be highly parallelized and such parallel implementation have been proposed for synchoros VLSI design~\cite{Yang2018RiBoSOM}, custom FPGA~\cite{Porrmann2006} and GPUs~\cite{McConnell2012}. Another important aspect of SOM and other NNs is their robustness. NNs work satisfactorly well with low bit resolution without sacrificing much of their accuracy~\cite{8056820}. In this work, we explore the limits of the SOM using different bit resolutions and the effect that it has on the accuracy of the SOM, as well as the benefits that this low resolution can provide for a hardware architecture. 
 
 \section{Introduction}
 An emerging design paradigm that is able to achieve better energy efficiency by trading off the quality (e.g., accuracy) and effort (e.g., energy) of computation is approximate computing~\cite{Zhang2014}. Many modern applications, such as machine learning and signal processing, are able to produce results with acceptable quality despite most of the calculations being computed imprecisely~\cite{Ye2013}. The tolerance of imprecise computation in approximate computing to acquire substantial performance gains is the basis for a wide range of architectural innovations~\cite{Esmaeilzadeh2012}. It has been demonstrated that high-precision computations are often unnecessary in the presence of statistical algorithms~\cite{Moons2017,Zhang2015}. Zhang et.al.~\cite{Zhang2015} report less than 5\% of quality loss obtained by simulation of the real hardware implemented in a 45nm CMOS technology.
@@ -14,30 +14,32 @@ Gupta et al. present results where they train deep networks with 16 bits fixed-p
 
 We present a design space exploration of a self-organizing map (SOM) to analyze the impact of different bit resolutions on the accuracy, as well as its benefits. SOM uses a type of unsupervised learning called the competitive ANN learning model. To lower the energy consumption, we exploit the robustness of SOM by successively lowering the resolution to gain efficiency and lower the implementation cost. We do an in-depth analysis of the reduction in resolution vs. loss in accuracy. We present an FPGA implementation of SOM aimed at a bacterial recognition system for battery-operated clinical use where the area, power, and performance are of critical importance. Using this implementation, we demonstrate that a 1\% loss in accuracy with 16-bit representation can yield significant savings in energy and area.
 \section{Background}
-In this section, we briefly introduce the SOM algorithm in \cite{Yang2018RiBoSOM} which has been used to recognize bacterial genomes.
+In this section, we briefly introduce the SOM algorithm \cite{Yang2018RiBoSOM} which has been used to recognize bacterial genomes.
 
-As shown in figure \ref{fig:algorithm}, a SOM network is organized in a circle to better match genomic data. Each SOM network hosts $N$ neurons. Each neuron has a weight vector which has the same size as the training vector, assume it's $M$. Therefore, the weight matrix for the whole SOM network would be $W=M \times N$. Input sequences, either for training or for inference, are vectors of size $M$. Each element in those input vectors represents a nucleotide.
+As shown in \figurename{~ \ref{fig:algorithm}}, a SOM network is organized in a circle to better match genomic data. Let us consider a SOM network with $N$ neurons. Each neuron has a weight vector which has the same size as the training vector. Let us assume it to be $M$. Therefore, the weight matrix ($W$) for the whole SOM network would have $M{\times}N$ weights. The weight vector of $j^{th}$ neuron is shown as $\Bigl[ w_{1,j},w_{2,j},\ldots,w_{M,j}\Bigr]$ in \figurename{~ \ref{fig:algorithm}}. Each element in the input vectors represents one of the four nucleotide ($C,G,T \text{or} A$). Let us assume the input sequence ($IS$), is a group of $S$ input vectors ($I_1, I_2,...,\text{and}~I_S$). During training and inference, distance of the input vectors from each neuron is calculated, shown using arrows in \figurename{~ \ref{fig:algorithm}}.
 \begin{figure}[htb]
-	\centerline{\includegraphics[width=0.5\textwidth]{SOMCircular.pdf}}
+	\centerline{\includegraphics[width=0.6\textwidth]{SOMCircular.pdf}}
 	\caption{SOM based Genomic Identification}
 	\label{fig:algorithm}
 \end{figure}
 
-The actual training and inference processes are described in algorithm \ref{alg:algorithm}. The objective is to embed genomic features of a specific bacteria into a SOM. When DNA sequences of unknown bacteria are compared with trained SOM networks, the SOM network trained with the same bacteria as the unknown test bacteria, must have the highest correlation. Based on the correlation, we can identify the unknown bacteria.
+The training phase is for a specific bacterial genome. The objective of training a SOM network is to embed genomic features of a specific bacteria into a SOM. Each SOM network can be trained to recognize only one bacteria. In order to recognize a range of bacteria, many SOM networks need to be trained. During inference, when DNA sequences of unknown bacteria are compared with trained SOM networks, the SOM network trained with the same bacteria as the unknown test bacteria, must have the highest correlation.Based on the correlation, we can identify the unknown bacteria. 
 
-The training phase is for a specific bacterial genome. The complete bacterial DNA sequence is chopped randomly into a set of fixed size training sequence, the $IS$ in algorithm \ref{alg:algorithm} line~\ref{IS_Def}. The weight matrix is initialized by random weights. On the line~\ref{beta_init}, a parameter $\beta$, initialized to 1.0, is used to control the converging process of SOM. In line~\ref{dist_min} and~\ref{j_min}, the actual training process first tries to find the neuron that best matches the particular input vector. Then, weights of the neighbourhood of the winning neuron are updated based on the distance between the target neuron and the winning neuron, as shown in line~\ref{dist_update} and~\ref{W_update}. Finally in line~\ref{beta_update}, the parameter $\beta$ is decreased by a factor. After repeating the training process for all training vectors, the SOM will learn the features of that particular bacterial genomes. Each SOM network can be trained to recognize only one bacteria. In order to recognize a range of bacteria, many SOM networks need to be trained.
+The actual training and inference processes are described in Algorithm~\ref{alg:algorithm}. During the training process algorithm first tries to find the neuron that has minimum distance from the particular input vector. This neuron is considered as wining neuron. Then, weights of the neighbourhood of the winning neuron are updated based on the distance from the winning neuron. The training process is repeated for all training vectors, and the SOM learns the features of that particular bacterial genomes.
 
-During test phase, some test DNA fragments from one unknown bacteria are send to each trained SOM network. The SOM network that correlates the test input sequence best, is chosen as the winning SOM and the bacteria it represents reveals the identity of the unknown test bacteria. The correlation measurement is marked by the score shown in line~\ref{score}. The smaller the score is, the better it correlates with the input test vectors.
+The weight matrix is initialized by random weights. The complete bacterial DNA sequence is chopped randomly into a set of fixed size training sequence, the $IS$ in Algorithm~\ref{alg:algorithm} line~\ref{IS_Def}. On the line~\ref{beta_init}, parameters $\beta_{min}$, $decay\_factor$, and $\beta$ are initialized. $\beta$ is used to control the converging process of SOM. Value of $\beta$ is decreased by the factor $decay\_factor$ at each step of converging process, and $\beta_{min}$ is the minimum value $beta$ can attain. In line~\ref{dist_min} and~\ref{j_min}, the actual training process first tries to find wining neuron. Then, weights of the neighbourhood of the winning neuron are updated based on the distance between the target neuron and the winning neuron, as shown in line~\ref{dist_update} and~\ref{W_update}. Finally in line~\ref{beta_update}, the parameter $\beta$ is decreased by $decay_factor$. After repeating the training process for all training vectors in the input sequence $IS$, the SOM would have learnt the features of that particular bacterial genomes. 
+
+During inference phase, some test DNA fragments from one unknown bacteria are send to each trained SOM network. The SOM network that correlates the test input sequence best, is chosen as the winning SOM and the bacteria it represents reveals the identity of the unknown test bacteria. The correlation measurement is marked by the score shown in Algorithm~\ref{alg:algorithm} line~\ref{score}. The smaller the score is, the better it correlates with the input test vectors.
 \begin{algorithm}[htb]
 	 \caption{Pseudo code SOM learning and inference for genome identification}
 	\label{alg:algorithm}
 	\begin{algorithmic}[1]\label{Algo:SOMTraining}
 %		\Procedure{SOMTraining}{$N,I,IS,W$}
 		\Statex \mbox{\textbf{Algorithm Part 1}: SOM training for 1 bacterial genome}
-		\Statex \textbf{Input} $N:$ Number of neurons
-		\Statex \textbf{Input} $I{=}[i_1, i_2, ..., i_M]$: Input-Vector
-       	\Statex \textbf{Input} $IS{=}{I_1, I_2, ..., I_S}$: Sequence of Input-Vectors, each IS represents one bacterial genome\label{IS_Def}
-       	\Statex \textbf{Input} $W_{i,j}: M\times N$ weight matrix for 1 bacteria
+		\State \textbf{Input} $N:$ Number of neurons
+		\State \textbf{Input} $I{=}[i_1, i_2, ..., i_M]$: Input-Vector
+       	\State \textbf{Input} $IS{=}{I_1, I_2, ..., I_S}$: Sequence of Input-Vectors, each IS represents one bacterial genome \label{IS_Def}
+       	\State \textbf{Input} $W_{i,j}: M\times N$ weight matrix for 1 bacteria
         \State $\beta_{min}=0.01$; $decay\_factor=0.99$; $\beta=1.0$\label{beta_init}
 		\For{$I_k \in IS$}
 		\State $dist_{min}=\min\limits_{j=1...N}(\sum_{i=1}^{M}|I_{k,i}-W_{i,j}|)$\label{dist_min}
@@ -52,8 +54,8 @@ During test phase, some test DNA fragments from one unknown bacteria are send to
 %    \Procedure{SOMInference}{$N,I,IS,W$}
   \Statex
    \mbox{\textbf{Algoritm Part 2}: SOM inference}
-    \Statex \textbf{Input} $TIS{=}{I_1, I_2, ..., I_S}$: Test Input Sequence of Input-Vectors for which the bacteria is to be identified
-    \Statex \textbf{Input} $W_{r,j,i}{=}R\times N \times M$: Weights for R bacteria
+    \State \textbf{Input} $TIS{=}{I_1, I_2, ..., I_S}$: Test Input Sequence of Input-Vectors for which the bacteria is to be identified
+    \State \textbf{Input} $W_{r,j,i}{=}R\times N \times M$: Weights for R bacteria
     \State $Inferred\_r$ is $r$ with\label{inferred_r}
     \State $score{=}\min\limits_{r=1...R}\Bigl[\sum_{k=1}^{S}\min\limits_{j=1...N}(\sum_{i=1}^{M} |I_{k,j}-W_{r,i,j}|)\Bigr]$\label{score}
 %   \EndProcedure		
@@ -62,36 +64,46 @@ During test phase, some test DNA fragments from one unknown bacteria are send to
 \section{Low bit-width FPGA Design of SOM}\label{custom}
 In this section, we present the FPGA implementations that were used to implement SOM for identification of bacterial genomes. The FPGA implementation is done on Xilinx Virtex7 485t chip for the identification of bacterial genomes. 
 
-A custom semi systolic array was hand crafted, for different bit width implementations, to analyze the area versus energy trade off. The design takes a vector of weights as input and finds the neuron in the network closest to input vector. This neuron is referred as winning neuron of the network. The design outputs the distance between the input vector and closest neuron's weights vector. This distance or score is used for identifying the bacteria in the test samples. During the training phase neurons weights are updated according to their distances from the winning neuron.
+A custom semi systolic array was hand crafted, for each of the different bit width implementations, to analyze the area versus energy trade off. The design takes a vector of weights as input and finds the neuron in the network closest to that input vector. This neuron is referred as the winning neuron of the network. During the inference phase, the design outputs the distance between the input vector and the closest neuron's weights vector. This distance or score is used for identifying the bacteria in the test samples. During the training phase, after finding the winning neuron, neurons weights are updated according to their distances from the winning neuron.
 \begin{figure}[h]
+	\centering
 	\captionsetup{font=sf}
-	\includegraphics[width=0.65\columnwidth]{SOMDesignOne_v2}
-	\caption{Hardware Module for BioSOM.}
+	\includegraphics[width=0.8\columnwidth]{SomFpgaDesign}
+	\caption{High level block diagram of the FPGA Implementation of BioSOM.}
 	\label{fig:SOMFPGAImplementation}
 \end{figure}
-Figure \ref{fig:SOMFPGAImplementation} shows a high level schematic of the FPGA implementation of BioSOM and illustrates the key components in the design. The input is a $n$-bit vector. Each pair of bits in the input represents one of nucleotide A,C,G or T. Thus a 16-bit word contains 8 symbols. 
 
-The Neural Network weights are stored in 2-dimensional array in BRAMs. $1^{st}$-dimension represent neurons in the network and $2^{nd}$-dimension holds the weights of each neuron. Each neuron has 8 weights and each weight is stored as a fixed-point number. Bit width analysis is performed by varying the number of bits (8, 12, 16, 24 and 32) used to represent the weights.
+Figure \ref{fig:SOMFPGAImplementation} shows a high level block diagram of the FPGA implementation of BioSOM. Same FPGA design is used for inferencing and training the SOM network. The design takes inputs ($I{=}[I_1,I_2,...I_M]$) an input-vector of $M$ symbols, a $start$ and an $update$ signal. Each pair of bits in the input represents one of nucleotide A,C,G or T. Thus an input vector of $M$ symbols is represented by $2M$ bits word. $update$ signal is to differentiate if the inference or training of network needs to be performed. The design outputs the $busy$ signal, an integer $score$, and $done$ signal. $busy$ signal is output as 0 if the design is ready to accept the next input-vector else set to 1. The $score$ value is the distance of the input-vector from the wining neuron. The $score$ is valid when the $done$ singal is set to 1. 
 
-During testing phase, only \textit{Compute Distance}, Figure \ref{fig:ComputeDistance}, is enabled (\textit{Update Enable=0}). This component returns the distance of a neuron from input weights. Using this distance, winning neuron of the network is identified.
-This component has pipe-lined implementation with an Initiation Interval (II) equal to 1. Each stage of the pipeline computes the difference between one input weight and corresponding neuron weight and updates the input partial sum. Output of each stage is fed as partial sum into next stage. Last stage output is the distance between the input and neuron.
-\begin{figure}[h]
-	\includegraphics[width=0.65\columnwidth]{computeDistance_v2}
-	\caption{Compute Distance Module.}
+The key components of the design are Compute\_Distance, Neuron\_Update, and NN\_Weights.
+NN\_Weights reads and updates the NN weights in BRAM, Compute\_Distance computes the distance of the input-vector ($I$) from a single neuron, and Neuron\_Update computes the updated weight vector of a neuron.
+The top level FSM iterates all the neurons of the SOM, reads the neuron weights using NN\_Weights. It then computes the distance of the neurons ($dist_j$) from $I$ using Compute\_Distance and updates ($dist_{min}$) and index of the winning neuron ($j_{min}$). During the inference phase ($update{=}0$), after computing the distance from all the neurons, the top level FSM returns $dist_{min}$ as a $score$ to determine the matching bacterial genome and sets the $done$ signal to 1. 
+
+Training phase ($update{=}1$) after finding the wininng neuron index ($j_{min}$) involves additional steps for updating the weight vectors. The top level FSM iteratively reads the neurons weights vector using NN\_Weights and invokes Neuron\_Update and passes the neuron weights vector, $I$, the wining neuron index ($j_{min}$), and network parameters $\beta$ as inputs. Neuron\_Update returns the updated neuron weights vector ($W^U$) which is stored in BRAM by top level FSM using the NN\_Weights. 
+
+The Neural Network weights are stored in 2-dimensional array in BRAMs. $1^{st}$ dimension represent neurons in the network and $2^{nd}$ dimension holds the weights of each neuron. Let us assume there are N neurons in the network, each neuron has M weights, and each weight is stored as a fixed-point number. Bit width analysis is performed by varying the number of bits (8, 12, 16, 24 and 32) used to represent the weights. The design is configurable for $N$, $M$ and number of bits to represent each weight. 
+
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.75\columnwidth]{computeDistance}
+	\caption{Pipelined implementation of Compute\_Distance with M stages and Initiation Interval (II)=1 .}
 	\label{fig:ComputeDistance}
 \end{figure}
+\figurename{~\ref{fig:ComputeDistance}} shows the Compute\_Distance module. This component takes an input-vector ($I$) and a neuron weight vector ($W$) as input and returns the distance between neuron weights and the input vector ($\sum_{i=1}^{M}|I_{i}-W_{i}|$) as described in Algorithm~\ref{alg:algorithm}. This component has a pipelined implementation with $M$ number of pipeline stages. The initiation Interval (II) of this component is 1. Each stage of the pipeline computes the absolute difference between one input element and the corresponding neuron weight and accumlates the difference into the partial sum (pSum) as shown in \figurename{~\ref{fig:ComputeDistance}}. The accumlated pSum is then passed as input to the next stage. The pSum to the first stage is set to zero. The pSum of the last stage is the distance between the input and neuron vectors.
 
-During training phase \textit{Neuron Update} component is enabled by setting (\textit{Update Enable=1}). The weights of the Neurons are updated using the distance output of the \textit{Compute Distance} module. The \textit{Neuron Update} component is also pipe-lined design with II=1. The stages of pipeline are shown in Figure \ref{fig:NeuronUpdate}.
-\begin{figure}[h]
-	\includegraphics[width=0.65\columnwidth]{neuronUpdate_v2}
-	\caption{Neuron Update Module.}
+The \textit{Neuron Update} has 7 stage pipe-lined design with II=1. The stages of pipeline are shown in Figure \ref{fig:NeuronUpdate}. Neuron\_Update takes inputs the weights vector ($W$), index of the neuron ($j$), the input vector ($I$), the wining neuron index ($J_{min}$), and the $/beta$ and outputs the updated weights vector $W_U$. 
+It first computes the distance ($dist$) of the neuron from the winning neuron (Algorithm~\ref{alg:algorithm}, line~\ref{dist_update}) and then computes the update factor ($\frac{\beta}{2^{dist}}$). Neuron\_Update then updates the weights using the update factor (Algorithm~\ref{alg:algorithm}, line~\ref{W_update}). 
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.75\columnwidth]{neuronUpdate}
+	\caption{Pipelined Implementation of Neuron\_Update with 7 stages and Initiation Interval (II)=1.}
 	\label{fig:NeuronUpdate}
 \end{figure}
 
-Clearly, the \textit{Neuron Update} can only start after \textit{Compute Distance} has completed finding closest neuron. So these two components can execute sequentially for a given input vector. However, while \textit{Neuron Update} is updating the weights for an \textit{Input Vector=i}, \textit{Compute Distance} can start its operations for next \textit{Input Vector=i+1}.  \textit{Compute Distance} and \textit{Neuron Update} components can overlap their execution, processing different input vectors at same time. This design has overall ${II=23+N}$ cycles, where N is number of neurons in the network.
+If $N$ is number of neurons in the SOM network and each neuron has $M$ weights, determining the wining neuron takes $M{+}N$ cycles. The latency of inference phase is $M$ and $II{=}1$. The weight update for an input vector, can only start after the top level FSM determines the winining neuron index ($j_{min}$). After finding the wining neuron, Neuron\_Update takes 7 cycles to update the weight vector of the first neuron and then $N{-}1$ cycles to updates the weights of the remaining $N{-}1$ neurons. For a given input vector, these two components can execute sequentially. However, while Neuron\_Update is processing $i^{th}$ input vector, Compute\_Distance can start its operations for next $(i{+}1)^{th}$ input vector, immediately after the first weight is updated by Neuron\_Update at $((M{+}N){+}7)^{th}$ cycle. In this way Compute\_Distance and Neuron\_Update components can overlap their execution, processing different input vectors at same time. This design has overall $II{=}M{+}N{+}7$ cycles for training phase.
 
 \section{Experimental Results And Analysis}\label{sec:results}
-In this section we present the results from our experiments. In subsection \ref{ex_setup} we give the details of our experimental setup used for measuring the accuracy of the SOM. Subsections \ref{fpga_results} describe the experimental setup and presents the results of the FPGA implementation.
+In this section we present the results from our experiments. In subsection \ref{ex_setup} we give the details of our experimental setup used for measuring the accuracy of the SOM. Subsections \ref{fpga_results} describe the experimental setup and present the results of the FPGA implementation.
 \subsection{Accuracy experimental setup}\label{ex_setup}
 The SOM has been implemented with a range of fixed-point formats. With fewer bits, one naturally expect that the SOM network for bacterial identification to suffer from accuracy degradation. A MATLAB simulation model was created to analyze the accuracy loss when using fixed-point implementation. The experiment used a scaled down version of bacterial identification problem, to reduce the training time of the network. We consider that this does not compromise the resulting accuracy of the SOM. We trained 10 SOMs with 10 different bacteria DNA sequences. Each SOM network has 100 neurons inside, and each neuron has 20 weights. We trained the networks by two independent training processes running in parallel. One is implemented using double precision floating point and the other is implemented with fixed-point weights. After training, we used the trained networks to identify the unknown sequence and record their scores.
 
@@ -113,20 +125,6 @@ Classification error and quantization error are not completely independent, but 
 We like to note that each SOM was trained with the specific fixed-point resolution and that the quantization error shows the difference of the \emph{score} variable, see algorithm \ref{alg:algorithm}, between the fixed-point and the double precision. The quantization error is very important for the \emph{score} variable of the SOM, since this variable is the one that decides which is the winning SOM, i.e. which SOM matches the input DNA sequence. It is important to guarantee sufficient bits for the \emph{score} of each SOM. If the resolution is too low, the \emph{score} of the SOMs after quantization will be identical even with low quantization error which makes it impossible to identify the bacteria correctly. This explains the fact that in Figure \ref{fig:error} the quantization error is low but the classification error is high in 8 to 12-bit resolution region.
 \subsection{FPGA experimental setup}\label{fpga_results}
 In this section we present the experimental results of the FPGA implementation presented in section \ref{custom}. The FPGA design is implemented with Vivado v.2016.4 used for synthesis and analysis of the HDL Designs. Our design is implemented in VHDL and validated using the Vivado simulator. Experimentation is done for different fixed point representations of weights by modifying parameters in VHDL code. 
-\begin{figure*}[hb]
-	\centering
-	\subfloat[FPGA LUT utilization]{\includegraphics[width=0.45\columnwidth]{area}
-		\label{fig:area}
-	}~
-	\subfloat[energy of FPGA implementation]{\includegraphics[width=0.46\columnwidth]{energy}
-		\label{fig:energy}
-	}
-	\caption{ Area and energy comparison for different fixed-point format.}
-	\label{fig:metrics}
-\end{figure*}
-
-The area and power numbers for different weight resolutions are extracted from the reports generated by Vivado tool post placement and routing with a working frequency of 100 MHz.
-Table \ref{table:1} compares the resources and area for 8, 12, 16, 24, and 32 bits fixed point formats, for a SOM network with 512 neurons. The second part of the table compares the average power in the different fixed point formats, for the same SOM.
 
 \begin{table}[h!]
 	\centering
@@ -169,10 +167,25 @@ Table \ref{table:1} compares the resources and area for 8, 12, 16, 24, and 32 bi
 		\bottomrule
 	\end{tabular}
 \end{table}
+
+The area and power numbers for different weight resolutions are extracted from the reports generated by Vivado tool post placement and routing with a working frequency of 100 MHz.
+Table \ref{table:1} compares the resources and area for 8, 12, 16, 24, and 32 bits fixed point formats, for a SOM network with 512 neurons. The second part of the table compares the average power in the different fixed point formats, for the same SOM.
+
+\begin{figure}[htb]
+	\centering
+	\subfloat[FPGA LUT utilization]{\includegraphics[width=0.45\columnwidth]{area}
+		\label{fig:area}
+	}~
+	\subfloat[energy of FPGA implementation]{\includegraphics[width=0.46\columnwidth]{energy}
+		\label{fig:energy}
+	}
+	\caption{ Area and energy comparison for different fixed-point format.}
+	\label{fig:metrics}
+\end{figure}
 The results are summarized in the Figure \ref{fig:area} and \ref{fig:energy}. Both the amount of utilized LUTs and total energy in Joule is presented against the classification error. From the figures, we can easily conclude that, we can substantially reduce the resources used and the energy by using a 16-bit fixed-point representation, without losing accuracy. We can reduce the resources even further by moving to the 12-bit representation, by sacrificing 39\% of the SOM accuracy. 
 \section{Summary}
-In this work we explore the design space of a self-organizing map (SOM) used for rapid and accurate identification of bacterial genomes. This is an important health care problem because even in Europe, 70\% of prescriptions for antibiotics is wrong.  The  SOM is trained on Next Generation Sequencing (NGS) data and is able to identify the exact strain of bacteria. This is in contrast to conventional methods that require genome assembly to identify the bacterial strain. SOM has been implemented on FPGA and shown to have better computational efficiency compared to GPUs. To further lower the energy consumption, we exploit the robustness of SOM by successively lowering the resolution to gain further improvements in efficiency and lower the implementation cost without substantially sacrificing the accuracy. We do an in depth analysis of the reduction in resolution vs. loss in accuracy as the basis for designing a system with the lowest cost and acceptable accuracy using NGS data from  samples containing multiple bacteria from the labs of one of the co-authors. The objective of this method is to design a bacterial recognition system for battery operated clinical use where the area, power and performance are of critical importance. We demonstrate that with 39\% loss in accuracy in 12 bits and 1\% in 16 bit representation can yield significant savings in energy and area.
+In this work we explore the design space of a self-organizing map (SOM) used for rapid and accurate identification of bacterial genomes. This is an important health care problem.  The  SOM is trained on Next Generation Sequencing (NGS) data and is able to identify the exact strain of bacteria. This is in contrast to conventional methods that require genome assembly to identify the bacterial strain. In this work SOM has been implemented on FPGA. To lower the energy consumption, we exploit the robustness of SOM by successively lowering the resolution to gain further improvements in efficiency and lower the implementation cost without substantially sacrificing the accuracy. We do an in depth analysis of the reduction in resolution vs. loss in accuracy as the basis for designing a system with the lowest cost and acceptable accuracy using NGS data from  samples containing multiple bacteria from the labs of one of the co-authors. The objective of this method is to design a bacterial recognition system for battery operated clinical use where the area, power and performance are of critical importance. We demonstrate that with 39\% loss in accuracy in 12 bits and 1\% in 16 bit representation can yield significant savings in energy and area.
 
-In this work, we implemented FPGA design for SOMs. The mapping support different bit width to enable trade-offs between accuracy and computation cost. Experiments has shown the big design space, resulting in different cost in terms of timing, area as well as energy, all of which are affected significantly by the fixed-point format representation. Through the experiment, we conclude that the SOM network with 16-bit fixed-point representation implemented on FPGA, has better benefits compared to other fixed-point formats with more bits. And 16-bit has acceptable classification error. Format with bits more than 16 no longer add any benefit to lower the classification error. 
+In this work, different bit width FPGA designs of SOM were implemented to enable trade-offs between accuracy and computation cost. Experiments has shown the big design space, resulting in different cost in terms of timing, area as well as energy, all of which are affected significantly by the fixed-point format representation. Through the experiment, we conclude that the SOM network with 16-bit fixed-point representation implemented on FPGA, has better benefits compared to other fixed-point formats with more bits. And 16-bit has acceptable classification error. Format with bits more than 16 no longer add any benefit to lower the classification error. 
 
-In future works, we plan to apply more sophisticated methods to scale down the bit width without losing too much accuracy. For example, the weights can be dynamically scaled after several epochs of training when the current fixed point format is not suitable anymore. We are confident that, with such approximate computing techniques, we could possible reduce the resolution to 8 bits with acceptable loss of accuracy and, by extension, the implementation cost of SOM networks on hardware.
+In future works, we plan to apply more sophisticated methods to scale down the bit width without losing too much accuracy. For example, the weights can be dynamically scaled after several epochs of training when the current fixed point format is not suitable anymore. We are confident that, with such approximate computing techniques, we could possibly reduce the resolution to 8 bits with acceptable loss of accuracy and, by extension, the implementation cost of SOM networks on hardware.
